--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            margin: 5px;
         }
 
         .tracker button:hover {
@@ -54,6 +55,7 @@
         <p id="startDate">Start Date: <span>Not Set</span></p>
         <p id="dayCount">Days Consistent: <span>0</span></p>
         <button onclick="markConsistent()">Mark Day Complete</button>
+        <button onclick="resetTracker()">Reset Tracker</button>
     </div>
 
     <script>
@@ -108,6 +110,21 @@
 
             // Display updated values
             document.getElementById('dayCount').querySelector('span').textContent = dayCount;
+        }
+
+        // Function to reset the tracker
+        function resetTracker() {
+            if (confirm("Are you sure you want to reset the tracker?")) {
+                dayCount = 0;
+                startDate = null;
+                lastMarkedDate = null;
+                localStorage.removeItem('consistencyDays');
+                localStorage.removeItem('startDate');
+                localStorage.removeItem('lastMarkedDate');
+
+                document.getElementById('startDate').querySelector('span').textContent = "Not Set";
+                document.getElementById('dayCount').querySelector('span').textContent = 0;
+            }
         }
     </script>
 </body>
